Fixing subnode bottom align for chrome/safari.

--- a/demo1/css/style.css
+++ b/demo1/css/style.css
@@ -293,9 +293,7 @@ html {
 body {
     font: 100%/1 'Roboto Condensed', 'DejaVu Sans', Arial, sans-serif;
     color: #3b322d;
-    /* pattern by http://jorickvanhees.com */
     background-color: transparent;
-    /*: #fff url(../media/rough_diagonal.png) repeat 0 0; /*d9c9ae*/
 }
 
 #page {
@@ -343,20 +341,21 @@ body {
     position: relative;   
     width: 100%;
     height: 100%;
-    padding: 0.25em;
+    padding: 1px;
     text-align: right;
     line-height: 1;
-	zoom:expression(
+/*	zoom:expression(
 	    runtimeStyle.zoom=1,
 	    insertAdjacentHTML('beforeEnd','<span class="after"></span>')
-    );	
+    );	*/
 }
 
-.node-contents:after{
+.node-contents:before {
     content: "";
     height: 100%;
     width: 0;
     display: inline-block;
+    vertical-align: bottom;
 }
 
 .node-details {
@@ -397,13 +396,11 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     position: relative;
-    vertical-align: bottom;
     padding: 0.425rem;
     border: 1px solid rgba(255, 255, 255, 0.4);
-    margin-left: 0.1rem;
-    margin-top: 0.1rem;
     border-radius: 3px;
     transition: border-color 0.5s ease;
+    vertical-align: bottom;
 }
 
 .subnode:hover,
